# ai_platform

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  DOCKER_BUILD_OPTIMIZATION.md  IMPLEMENTATION_STATUS.md  README.md  docker-build-test.sh
cpp/: CMakeLists.txt
cpp/capabilities/_agface_common/: CMakeLists.txt
cpp/capabilities/action_recognize/: CMakeLists.txt  action_recognize.cpp  action_recognize.h
cpp/capabilities/agface_barehead/: CMakeLists.txt  agface_barehead.cpp
cpp/capabilities/agface_face_detect/: CMakeLists.txt  agface_face_detect.cpp  agface_face_detect.h
cpp/capabilities/agface_face_feature_glint512/: CMakeLists.txt  agface_face_feature_glint512.cpp
cpp/capabilities/agface_face_feature_mobilenet256/: CMakeLists.txt  agface_face_feature_mobilenet256.cpp
cpp/capabilities/agface_face_feature_residual256/: CMakeLists.txt  agface_face_feature_residual256.cpp
cpp/capabilities/agface_face_property/: CMakeLists.txt  agface_face_property.cpp
cpp/capabilities/agface_fake_photo/: CMakeLists.txt  agface_fake_photo.cpp
cpp/capabilities/asr/: CMakeLists.txt  asr.cpp  asr.h
cpp/capabilities/asr_punct_restore/: CMakeLists.txt  asr_punct_restore.cpp  asr_punct_restore.h
cpp/capabilities/audio_denoise/: CMakeLists.txt  audio_denoise.cpp  audio_denoise.h
cpp/capabilities/audio_fingerprint/: CMakeLists.txt  audio_fingerprint.cpp  audio_fingerprint.h
cpp/capabilities/bill_verify/: CMakeLists.txt  bill_verify.cpp  bill_verify.h
cpp/capabilities/body_action_recognize/: CMakeLists.txt  body_action_recognize.cpp  body_action_recognize.h
cpp/capabilities/content_compliance/: CMakeLists.txt  content_compliance.cpp  content_compliance.h
cpp/capabilities/contract_amount/: CMakeLists.txt  contract_amount.cpp  contract_amount.h
cpp/capabilities/contract_extract/: CMakeLists.txt  contract_extract.cpp  contract_extract.h
cpp/capabilities/contract_party/: CMakeLists.txt  contract_party.cpp  contract_party.h
cpp/capabilities/contract_seal_detect/: CMakeLists.txt  contract_seal_detect.cpp  contract_seal_detect.h
cpp/capabilities/contract_sign_locate/: CMakeLists.txt  contract_sign_locate.cpp  contract_sign_locate.h
cpp/capabilities/contract_summary/: CMakeLists.txt  contract_summary.cpp  contract_summary.h
cpp/capabilities/crowd_count/: CMakeLists.txt  crowd_count.cpp  crowd_count.h
cpp/capabilities/deepfake_detect/: CMakeLists.txt  deepfake_detect.cpp  deepfake_detect.h
cpp/capabilities/desktop_recapture_detect/: CMakeLists.txt  desktop_recapture_detect.cpp  desktop_recapture_detect.h
cpp/capabilities/doc_classify/: CMakeLists.txt  doc_classify.cpp  doc_classify.h
cpp/capabilities/doc_classify_rpa/: CMakeLists.txt  doc_classify_rpa.cpp  doc_classify_rpa.h
cpp/capabilities/doc_rectify/: CMakeLists.txt  doc_rectify.cpp  doc_rectify.h
cpp/capabilities/entity_link/: CMakeLists.txt  entity_link.cpp  entity_link.h
cpp/capabilities/eseal_detect/: CMakeLists.txt  eseal_detect.cpp  eseal_detect.h
cpp/capabilities/eseal_verify/: CMakeLists.txt  eseal_verify.cpp  eseal_verify.h
cpp/capabilities/face_3d_reconstruct/: CMakeLists.txt  face_3d_reconstruct.cpp  face_3d_reconstruct.h
cpp/capabilities/face_attribute/: CMakeLists.txt  face_attribute.cpp  face_attribute.h
cpp/capabilities/face_beautify/: CMakeLists.txt  face_beautify.cpp  face_beautify.h
cpp/capabilities/face_desensitize/: CMakeLists.txt  face_desensitize.cpp  face_desensitize.h
cpp/capabilities/face_detect/: CMakeLists.txt  face_detect.cpp  face_detect.h
cpp/capabilities/face_landmark/: CMakeLists.txt  face_landmark.cpp  face_landmark.h
cpp/capabilities/face_liveness_action/: CMakeLists.txt  face_liveness_action.cpp  face_liveness_action.h
cpp/capabilities/face_liveness_silent/: CMakeLists.txt  face_liveness_silent.cpp  face_liveness_silent.h
cpp/capabilities/face_quality/: CMakeLists.txt  face_quality.cpp  face_quality.h
cpp/capabilities/face_recognition/: CMakeLists.txt  face_recognition.cpp  face_recognition.h
cpp/capabilities/face_swap/: CMakeLists.txt  face_swap.cpp  face_swap.h
cpp/capabilities/face_verify/: CMakeLists.txt  face_verify.cpp  face_verify.h
cpp/capabilities/form_extract/: CMakeLists.txt  form_extract.cpp  form_extract.h
cpp/capabilities/gesture_recognize/: CMakeLists.txt  gesture_recognize.cpp  gesture_recognize.h
cpp/capabilities/handwriting_reco/: CMakeLists.txt  handwriting_reco.cpp  handwriting_reco.h
cpp/capabilities/hk_macao_permit_ocr/: CMakeLists.txt  hk_macao_permit_ocr.cpp  hk_macao_permit_ocr.h
cpp/capabilities/household_register_ocr/: CMakeLists.txt  household_register_ocr.cpp  household_register_ocr.h
cpp/capabilities/id_card_back_detect/: CMakeLists.txt  id_card_back_detect.cpp  id_card_back_detect.h
cpp/capabilities/id_card_classify/: CMakeLists.txt  id_card_classify.cpp  id_card_classify.h
cpp/capabilities/id_card_front_detect/: CMakeLists.txt  id_card_front_detect.cpp  id_card_front_detect.h
cpp/capabilities/id_card_ocr/: CMakeLists.txt  id_card_ocr.cpp  id_card_ocr.h
cpp/capabilities/image_classify/: CMakeLists.txt  image_classify.cpp  image_classify.h
cpp/capabilities/image_dehaze/: CMakeLists.txt  image_dehaze.cpp  image_dehaze.h
cpp/capabilities/image_denoise/: CMakeLists.txt  image_denoise.cpp  image_denoise.h
cpp/capabilities/image_enhance/: CMakeLists.txt  image_enhance.cpp  image_enhance.h
cpp/capabilities/image_inpaint/: CMakeLists.txt  image_inpaint.cpp  image_inpaint.h
cpp/capabilities/image_retrieval/: CMakeLists.txt  image_retrieval.cpp  image_retrieval.h
cpp/capabilities/image_super_res/: CMakeLists.txt  (+2 more)
cpp/cmake/: CapabilityPlugin.cmake  CompilerFlags.cmake  FindAgfaceOpenCV.cmake  FindCUDA.cmake  FindNCNN.cmake  FindONNXRuntime.cmake  FindTensorRT.cmake
cpp/jni/: CMakeLists.txt  ai_jni_bridge.cpp  cn_agilestar_ai_AiCapability.h
cpp/runtime/: CMakeLists.txt  ai_runtime.cpp  capability_loader.cpp  instance_pool.cpp  license_checker.cpp  model_loader.cpp
cpp/sdk/: ai_capability.h  ai_runtime.h  ai_types.h
license/tools/: CMakeLists.txt
(+828 files in other folders)
